beginning to add flexbox styling to bio page

--- a/bio.html
+++ b/bio.html
@@ -11,7 +11,7 @@
     <title>Bio</title>
 </head>
 <body>
-    <div class="container">
+    <!-- <div class="bodycontainer"> -->
         <div class="navbar">
             <ul class="navbar">
                 <li class="navbar"><a href="home.html">Home</a></li>
@@ -24,8 +24,8 @@
             <h2> My Bio Page</h2>
         </div>
     
-        <divs class="body">
-            <div class="topbody">
+        <div class="biobody">
+            <div class="topbiobody">
                 <div class="lefttop">
                     <img src="https://content.mycutegraphics.com/graphics/kids/brunette-girl.png"/>
                 </div>
@@ -33,7 +33,7 @@
                     <p>my bio will go here</p>
                 </div>
             </div>
-            <div class="bottombody">
+            <div class="bottombiobody">
                 a fun animation will go down here
             </div>
         </divs>
@@ -46,7 +46,7 @@
                 <li><a url="#">etc</li>
             </ul>
         </footer>
-    </div>
+    <!-- </div> -->
     
 
 </body>
