--- a/bio.html
+++ b/bio.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <script src="https://code.jquery.com/jquery-3.2.0.min.js" integrity="sha256-JAW99MJVpJBGcbzEuXk4Az05s/XyDdBomFqNlM3ic+I="
     crossorigin="anonymous"></script>
-    <script type="javascript" src="app.js"></script>
+    <script type="text/javascript" src="app.js"></script>
     <title>Bio</title>
 </head>
 <body>
