giving some styling

--- a/bio.html
+++ b/bio.html
@@ -28,11 +28,12 @@
             <div class="topbiobody">
                 <div class="lefttop">
                     <div id="biopic"></div>
-                    <img id="fit" src="bio_images/face1.jpeg"/>
+                    <img id="fit" src="bio_images/face11.jpeg"/>
                     <!-- <img src="https://content.mycutegraphics.com/graphics/kids/brunette-girl.png"/> -->
                 </div>
                 <div class="righttop">
-                    <p>my bio will go here</p>
+                    <h3> Who is She?</h3>
+                    <p>Bailey From Austin</p>
                 </div>
             </div>
             <div class="bottombiobody">
