--- a/bio.html
+++ b/bio.html
@@ -33,11 +33,15 @@
                 <div class="lefttop">
                     <div id="biopic"></div>
                     <img id="fit" src="bio_images/face11.jpeg"/>
-                    <!-- <img src="https://content.mycutegraphics.com/graphics/kids/brunette-girl.png"/> -->
+                    
                 </div>
                 <div class="righttop">
                     <h3> Who is She?</h3>
-                    <p>Bailey From Austin</p>
+                    <p>Red leicester cheese triangles brie. Port-salut boursin manchego gouda cauliflower cheese st. agur blue cheese say cheese lancashire. Swiss cow feta airedale cheesecake cheesecake caerphilly babybel. Cheeseburger mozzarella bocconcini cheese strings mascarpone.
+
+                        Rubber cheese dolcelatte cheese triangles. Danish fontina cow cauliflower cheese goat dolcelatte cheddar melted cheese rubber cheese. Blue castello jarlsberg roquefort squirty cheese cottage cheese cheesecake parmesan croque monsieur. Cow brie.
+                        
+                        </p>
                 </div>
             </div>
             <div class="bottombiobody">
