nav bar figured out on ALL pages for mobile now.. i think

--- a/bio.html
+++ b/bio.html
@@ -18,7 +18,7 @@
     <!-- <div class="bodycontainer"> -->
         <div class="navbar">
             <ul class="navbar">
-                <li class="navbar"><a href="index.html"> Home <span class="lnr lnr-home"></span></a></li>
+                <li class="navbar homenav"><a href="index.html"> Home <span class="lnr lnr-home"></span></a></li>
                 <li class="navbar"><a href="bio.html">Bio <span class="lnr lnr-star"></span></a></li>
                 <li class="navbar"><a href="resume.html">Resume <span class="lnr lnr-eye"></span></a></li>
                 <li class="navbar"><a href="codeprojects.html">Coding Projects <span class="lnr lnr-rocket"></span></a></li>
