changed bio heading to who is bailey

--- a/bio.html
+++ b/bio.html
@@ -43,7 +43,7 @@
             
       
             <div class="biotext">
-                <h3> Who is She?</h3>
+                <h3> Who is Bailey?</h3>
             <p>Red leicester cheese triangles brie. Port-salut boursin manchego gouda cauliflower cheese st. agur blue cheese say cheese lancashire. Swiss cow feta airedale cheesecake cheesecake caerphilly babybel. Cheeseburger mozzarella bocconcini cheese strings mascarpone.
 
             Rubber cheese dolcelatte cheese triangles. Danish fontina cow cauliflower cheese goat dolcelatte cheddar melted cheese rubber cheese. Blue castello jarlsberg roquefort squirty cheese cottage cheese cheesecake parmesan croque monsieur. Cow brie.
