--- a/bio.html
+++ b/bio.html
@@ -63,8 +63,8 @@
     
         <footer class="links">
             <ul class="links">
-                <li><a url="#">LinkedIn</li>
-                <li><a url="#">GitHub</li>
+                <li><a url="https://www.linkedin.com/in/bailey-s-mcdonald/">LinkedIn</li>
+                <li><a url="https://github.com/texasmami/">GitHub</li>
                 <li><a url="#">etc</li>
             </ul>
         </footer>
