--- a/bio.html
+++ b/bio.html
@@ -63,9 +63,9 @@
     
         <footer class="links">
             <ul class="links">
-                <li><a url="https://www.linkedin.com/in/bailey-s-mcdonald/">LinkedIn</li>
-                <li><a url="https://github.com/texasmami/">GitHub</li>
-                <li><a url="#">etc</li>
+                <li><a href="https://www.linkedin.com/in/bailey-s-mcdonald/">LinkedIn</li>
+                <li><a href="https://github.com/texasmami/">GitHub</li>
+                <li><a href="#">etc</li>
             </ul>
         </footer>
     <!-- </div> -->
